# minecraft-clone

./: .gitignore  CMakeLists.txt  README.md  resfile.12536
inc/: camera.h  helper.h  scenes.h  shader.h  textrenderer.h  vertices.h  windowmanager.h
inc/glad/: glad.h
lib/: glfw3.lib
shaders/: block.frag  block.vert  block2.frag  block2.vert  block3.frag  block3.vert  textureShader.frag  textureShader.vert
src/: camera.cpp  glad.c  main.cpp  shader.cpp  test1.cpp  textrenderer.cpp  windowmanager.cpp
src/temp/: main.cpp  merge.h
